# AT_ONTOLOGY_PARSER

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
at_ontology_parser/: base.py  exceptions.py  reference.py
at_ontology_parser/model/: __init__.py  handler.py
at_ontology_parser/model/definitions/: __init__.py  artifact_definition.py  constraint_definition.py  import_definition.py  property_definition.py
at_ontology_parser/model/types/: __init__.py  data_type.py  relationship_type.py  vertex_type.py
at_ontology_parser/ontology/: handler.py
at_ontology_parser/ontology/assignments/: __init__.py  artifact_assignment.py  property_assignment.py
at_ontology_parser/ontology/instances/: __init__.py  relationship.py  vertex.py
at_ontology_parser/parsing/: parser.py
at_ontology_parser/parsing/models/: base.py  instancable.py  instance.py
at_ontology_parser/parsing/models/model/: handler.py
at_ontology_parser/parsing/models/model/definitions/: artifact_definition.py  constraint_definition.py  import_definition.py  property_definition.py
at_ontology_parser/parsing/models/model/types/: data_type.py  relationship_type.py  vertex_type.py
at_ontology_parser/parsing/models/ontology/: handler.py
at_ontology_parser/parsing/models/ontology/assignments/: artifact_assignment.py  property_assignment.py
tests/fixtures/: course-discipline-types.mdl.yml  normative-types.mdl.yml  test-ontology.ont.yml
tests/fixtures/yaml/: course-discipline-types.mdl.yml  test-ontology.ont.yml
tests/parsing/: test_parser.py
(+2 files in other folders)
